--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,9 @@ fieldset {
 body {
 	scrollbar-gutter: stable;
 }
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background: none;
+}
