--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,43 +12,55 @@ h4,
 h5,
 h6,
 p {
-	margin: 0;
+  margin: 0;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 ul,
 ol {
-	list-style: none;
-	padding-left: 0;
-	margin: 0;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 img {
-	display: block;
-	max-width: 100%;
-	height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 button {
-	cursor: pointer;
-	padding: 0;
+  cursor: pointer;
+  padding: 0;
 }
 
 input {
-	font-family: inherit;
+  font-family: inherit;
 }
 fieldset {
-	padding: 0;
-	margin: 0;
-	border: none;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 body {
-	scrollbar-gutter: stable;
+  scrollbar-gutter: stable;
 }
 select {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	background: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: none;
+}
+
+.active-route:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  
+  height: 4px;
+  border-radius: 2px;
+  display: block;
+  width: 100%;
 }
